# vibemq

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  compose.yml  deny.toml  optimization-guide.md  vibemq.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  docker-dev.yml  docker.yml  release.yml
docs/mqtt-rfc/v3.1.1/: 00-abstract.md  01-introduction.md  02-terminology.md  03-data-representations.md  04.01-packet-structure.md  04.02-fixed-header.md  04.03-variable-header.md  04.04-payload.md  05.01-connect.md  05.02-connack.md  05.03-publish.md  05.04-publish-ack.md  05.05-subscribe.md  05.06-unsubscribe.md  05.07-ping.md  05.08-disconnect.md  06-operational-behavior.md  (+8 more)
docs/tests/: v3.1.1.md  v5.md
examples/: test_connect.rs  test_multi.rs
examples/bridge/: compose.yml  node2.toml
examples/cluster/: README.md  compose.yml  config.toml  kubernetes.yaml
spec/v3.1.1/: 1.5_data-representations.md  2.2_fixed-header.md  3.10_unsubscribe.md  3.11_unsuback.md  3.12_pingreq.md  3.13_pingresp.md  3.14_disconnect.md  3.1_connect.md  3.2_connack.md  3.3_publish.md  3.4_puback.md  3.5_pubrec.md  3.6_pubrel.md  3.7_pubcomp.md  3.8_subscribe.md  3.9_suback.md  4.7_topic-names-and-filters.md
spec/v5.0/: 1.5_data-representation.md  2.2_variable-header.md  2.4_reason-code.md  3.14_disconnect.md  3.15_auth.md  3.1_connect.md  3.2_connack.md  3.3_publish.md  3.8_subscribe.md  4.3_qos.md  4.7_topic-names-and-filters.md  4.9_flow-control.md
src/: buffer_pool.rs  lib.rs  main.rs  profiling.rs
src/acl/: mod.rs  tests.rs
src/auth/: mod.rs  tests.rs
src/bridge/: client.rs  manager.rs  mod.rs  tests.rs  topic_mapper.rs
src/broker/: connection.rs  mod.rs  router.rs  sys_topics.rs  tls.rs  writer.rs
src/cluster/: manager.rs  mod.rs  peer.rs  protocol.rs
src/codec/: cached.rs  decode.rs  encode.rs  mod.rs  tests.rs
src/config/: bridge.rs  cluster.rs  metrics.rs  mod.rs  persistence.rs  proxy.rs  tests.rs
src/flapping/: mod.rs
src/hooks/: mod.rs  tests.rs
src/metrics/: mod.rs  server.rs
src/persistence/: backend.rs  error.rs  fjall.rs  mod.rs  models.rs
src/protocol/: error.rs  mod.rs  packet.rs  properties.rs  reason.rs
src/remote/: message.rs  mod.rs  peer.rs
src/session/: mod.rs
src/topic/: mod.rs  trie.rs  validation.rs
src/transport/: mod.rs  websocket.rs
tests/: bridge.rs  conformance.rs  integration.rs
tests/mqtt_conformance/: STATUS_V311.md  mod.rs
(+64 files in other folders)
