[package]
name = "vibemq"
version = "0.0.0-dev"
edition = "2021"
authors = ["VibeMQ Contributors"]
description = "High-performance MQTT v3.1.1/v5.0 compliant broker"
license = "MIT"
repository = "https://github.com/vibesrc/vibemq"
keywords = ["mqtt", "broker", "iot", "messaging"]
categories = ["network-programming"]

[features]
default = []
pprof = ["dep:pprof", "dep:uuid", "dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys"]

[dependencies]
# Async runtime - required for high-performance I/O
tokio = { version = "1.34", features = ["full"] }

# Bytes handling - zero-copy buffer management
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrent data structures
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Hashing
ahash = "0.8"
fnv = "1.0"
argon2 = "0.5"

# Performance optimizations - inline small collections and strings
smallvec = "1.13"
compact_str = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration and serialization
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Async trait support
async-trait = "0.1"

# TLS support
tokio-rustls = "0.26"

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = "0.3"
config = { version = "0.15.19", features = ["toml"] }
regex = "1.10"

# Clustering
chitchat = "0.9"
bincode = "2.0"
hostname = "0.4"
serde_json = "1.0"

# Metrics
prometheus = { version = "0.14", default-features = false }
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Profiling (optional)
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"], optional = true }
uuid = { version = "1.11", features = ["v4"], optional = true }
tikv-jemallocator = { version = "0.6", features = ["profiling"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemalloc-sys = { version = "0.6", features = ["profiling"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.4"
tokio-test = "0.4"
test-case = "3.3"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
